# mlx_quantum

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  validate.py
examples/: benchmark_vs_qiskit.py  simple_mlp.py
mlx_quantum/: __init__.py  layer.py  statevector.py
tests/: _circuits.py  test_convention.py  test_layer.py  test_properties.py  test_statevector.py  test_vs_qiskit.py
