[project]
name = "mlx-quantum"
version = "0.1.1"
description = "Fast, differentiable quantum-machine-learning in pure Apple MLX — GPU statevector simulation with native autodiff."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["mlx", "quantum", "quantum-machine-learning", "differentiable", "apple-silicon"]
dependencies = [
    "mlx>=0.31.2",
    "numpy>=2.5.1",
]

# Qiskit is only needed to cross-validate/benchmark against; the library itself
# depends on nothing but MLX and NumPy.
[project.optional-dependencies]
examples = [
    "matplotlib>=3.9",
    "qiskit>=2.5.0",
    "qiskit-machine-learning>=0.9.0",
    "qiskit-algorithms>=0.4.0",
    "qiskit-aer>=0.17.2",
]

[project.urls]
Repository = "https://github.com/UmarGit/mlx_quantum"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mlx_quantum"]

[tool.hatch.build.targets.sdist]
include = [
    "/mlx_quantum",
    "/tests",
    "/examples",
    "/benchmarks",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=9.1",
    "matplotlib>=3.9",
    "qiskit>=2.5.0",
    "qiskit-machine-learning>=0.9.0",
    "qiskit-algorithms>=0.4.0",
    "qiskit-aer>=0.17.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
